--- a/WolvenKit.CR2W/packages.config
+++ b/WolvenKit.CR2W/packages.config
@@ -1,11 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Catel.Core" version="5.12.8" targetFramework="net48" />
   <package id="Cyotek.Windows.Forms.ColorPicker" version="1.7.2" targetFramework="net461" />
   <package id="DotNetHelper.FastMember.Extension" version="2.0.0" targetFramework="net48" />
   <package id="FastMember" version="1.5.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
