--- a/WolvenKit.Cache/packages.config
+++ b/WolvenKit.Cache/packages.config
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Catel.Core" version="5.12.8" targetFramework="net48" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net48" />
 </packages>
