--- a/WolvenKit.Render/packages.config
+++ b/WolvenKit.Render/packages.config
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssimpNet" version="4.1.0" targetFramework="net48" />
+  <package id="Catel.Core" version="5.12.8" targetFramework="net48" />
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net48" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net48" />
   <package id="FSharp.Core" version="4.7.1" targetFramework="net48" />
@@ -8,4 +9,17 @@
   <package id="SharpDX" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net48" />
 </packages>
