--- a/WolvenKit.UI/WolvenKit.UI.csproj
+++ b/WolvenKit.UI/WolvenKit.UI.csproj
@@ -4,6 +4,7 @@
     <AssemblyName>WolvenKit.UI</AssemblyName>
     <RootNamespace>WolvenKit.UI</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -26,16 +27,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Templates\DialogTemplates.xaml.cs" />
+    <Compile Remove="ViewModels\MainViewModel.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Catel.Core" Version="5.12.8" />
     <PackageReference Include="Catel.MVVM" Version="5.12.8" />
     <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
+    <PackageReference Include="Dirkster.AvalonDock" Version="4.40.0" />
+    <PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.40.0" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.0.1" />
     <PackageReference Include="Fody" Version="6.2.5" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
     <PackageReference Include="Obsolete.Fody" Version="5.2.1" PrivateAssets="all" />
     <PackageReference Include="Orchestra.Shell.Ribbon.Fluent" Version="6.0.3" />
+    <PackageReference Include="SharpVectors.Reloaded" Version="1.6.0" />
     <PackageReference Include="WpfAnalyzers" Version="3.1.0" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WPFFolderBrowser" Version="1.0.2" />
+    <PackageReference Include="Xceed.Wpf.AvalonDock.Themes.VS2013" Version="2.9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -183,4 +195,19 @@
         </ItemGroup>
     </When>
   </Choose>
+  <ItemGroup>
+    <None Remove="Resources\Icons\WK_Logo.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Remove="Templates\DialogTemplates.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Icons\WK_Logo.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.App\WolvenKit.App.csproj" />
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+  </ItemGroup>
 </Project>
